--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".PlayerActivity">
+        <activity android:name=".IntroducePage">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity android:name=".PlayerActivity"/>
         <activity android:name=".LyricActivity"/>
         <service android:name=".PlayerService">
             <intent-filter>
                 <action android:name="com.mindjet.media.MUSIC_SERVICE"/>
             </intent-filter>
-            </service>
+        </service>
+
     </application>
 
 </manifest>
